*** *** 
           * fixed chatcontrol modification showing only first word;
           * fixed chatcontrol search problem;
           * fixed chatcontrol unable to add \s in regexp;
           * fixed #1863452
           * fixed #1864463;
           * to toast pleasure, chatcontrol op notifier now includes ip and cid;
           * fixed some chatcontrol flags;
           * rewritten adding, quitting users, also iterating;
           * moved all users to linked list from java;
           * connection and synchronised shit;
           * some debugging logs added;


*** Theta RC 3 02.01.2008 ***
           * topic is saved on the spot into config;
           * fixed chatcontrol cmd flags;
           * fixed hubtracker command showing;
           * solved hideme error msg;
           * added manual src;
           * updated the installer and readme;
           * updated main page;
           * updated some gui looks on misc settings;
           * fixed possible exception;
           * moved logs to log dir
           * modules reworking;
           * created nsis installer for dshub windows;
           * created JSmooth project file for windows exe creating ( http://sf.net/projects/jsmooth )
           * fixed small issue with files path;
           * new flag 256 for chatcontrol search check;
           * new checkbox in GUI for search chatcontrol;
           * added chatcontrol search possibility;
           * fixed bug with granting all;
           * redirecting on STA error should work now;
           * hope that hub_host works better now;
           * added a text field and commands for it ;
           * redirect_url variable added;
           * extended redirect should work now;
           * redirecting nicks and regex should work now;
           * redirect is now an attribute grantable ( accounts reset );
           * fixed modules dissapearing from GUI from last svn
           * redirect framework , added basic CID redirect